# prism

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: cmd_enrich.rs  cmd_fix.rs  cmd_hook.rs  cmd_lint.rs  cmd_start.rs  cmd_status.rs  cmd_stop.rs  main.rs
crates/prism-cli/tests/: integration.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: command_runner.rs  config.rs  discovery.rs  document.rs  drift.rs  enrich.rs  freshness.rs  frontmatter.rs  hashing.rs  hierarchy.rs  lib.rs
crates/prism-core/src/hooks/: mod.rs  protocol.rs
crates/prism-core/src/hooks/post_tool_use/: mod.rs
crates/prism-core/src/hooks/session_start/: mod.rs
crates/prism-core/src/icm/: mod.rs
crates/prism-core/src/icm/rules/: budgets.rs  layer_existence.rs  mod.rs  sections.rs  stage_shape.rs  style.rs
crates/prism-core/src/templates/: content.rs  mod.rs  registry.rs  render.rs  validate.rs
crates/prism-core/src/templates/scaffold/: io.rs  mod.rs  options.rs
crates/prism-db/: Cargo.toml
crates/prism-db/src/: directive_log.rs  doc_drift.rs  document_registry.rs  enrichment_runs.rs  file_hashes.rs  lib.rs  schema.rs
docs/plans/: fresh-rebuild-plan.md  how-is-prism-state.md  lightweight-icm-enforcement.md  stale-dead-code-audit-prism-v2-1.md
skills/prism-fix/: SKILL.md
skills/prism-lint/: SKILL.md
skills/prism-start/: SKILL.md
skills/prism-status/: SKILL.md
skills/prism-stop/: SKILL.md
templates/: CLAUDE.md.template  CONTEXT.md.template  PRISM.md.template  dir-CLAUDE.md.template  dir-CONTEXT.md.template  drift-report.md.template
templates/refs/: architecture.md.template  dependencies.md.template  domain-knowledge.md.template  pattern.md.template  schema.md.template
templates/rules/: general-conventions.md.template  icm-conventions.md.template  prism-document-standard.md.template  service-conventions.md.template  test-conventions.md.template  viewmodel-conventions.md.template
