[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
authors = ["Evan <evan.pierrelouis@pm.me>"]
repository = "https://github.com/unfazed-dev/prism"
keywords = ["claude-code", "documentation", "drift-detection"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
globset = "0.4"
walkdir = "2"
pulldown-cmark = "0.12"
minijinja = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

prism-core = { path = "crates/prism-core" }
prism-db = { path = "crates/prism-db" }

[workspace.dependencies.rstest]
version = "0.23"

[workspace.dependencies.tempfile]
version = "3"

[workspace.dependencies.assert_cmd]
version = "2"

[workspace.dependencies.predicates]
version = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
