[package]
name = "prism-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
prism-db.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
minijinja.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
